# wish_lists

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  conftest.py  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
authentication/: urls.py  views.py
authentication/templates/: authentication.html  forget_password.html  registration.html
deploy/: docker-compose.yml
index/: urls.py  views.py
index/templates/: about.html  contacts.html  home.html
src/: manage.py
src/assets/css/: style.css
src/authentication/: admin.py  forms.py  message_text.py  models.py  tests.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
src/authentication/templates/: authentication.html  change_password.html  forget_password.html  login.html  registration.html  reset_pass_verification.html  reset_password.html  verification.html
src/authentication/tests/: test_forms.py  test_views.py
src/friends/: admin.py  models.py  urls.py  views.py
src/friends/migrations/: 0001_initial.py  (+2 more)
src/index/: tests.py  urls.py  views.py
src/templates/: layouts.html
src/userprofile/: admin.py  forms.py  models.py  urls.py  views.py
src/wish_lists/: asgi.py  settings.py  urls.py  wsgi.py
templates/: layouts.html
userprofile/: admin.py  models.py  urls.py  views.py
userprofile/migrations/: 0001_initial.py  0002_alter_wish_image.py  0004_alter_wish_image.py
userprofile/templates/: add_wish.html  edit_wish.html  user_profile.html  wish_details.html
wish_lists/: asgi.py  settings.py  urls.py  wsgi.py
(+20 files in other folders)
