[tool.poetry]
name = "wish_lists"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^1.0.0"
Pillow = "^9.4.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
