[tool.poetry]
name = "wish_lists"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^1.0.0"
Pillow = "^9.4.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.2"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
django-silk = "^5.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ['tests.py', 'test_*.py', '*_tests.py']
DJANGO_SETTINGS_MODULE = 'src.wish_lists.settings'
pythonpath = '. src'

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.djlint]
ignore="D018,H006,H021,H023"
